With a little update in the project body

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,8 @@
         <title>Test</title>
     </head>
     <body>
+        <h1>Welcome to Test</h1>
+        It's simple Hello world. Don't worry, this is a start. 
 
     </body>
 
