--- a/hello.html
+++ b/hello.html
@@ -3,11 +3,16 @@
 <html lang="en">
     <head>
         <title>Test</title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Welcome to Test</h1>
 
-        It's simple Hello world.<h2 style="color:blue;">Don't worry</h2>, this is a start. 
+        It's simple Hello world.<h2>Don't worry</h2>, this is a start. 
 
 
     </body>
