--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Welcome to Test</h1>
 
-        It's simple Hello world.<h2 style="color:blue;">Don't worry</h2>, this is a start. 
+        It's simple Hello world.<h2 style="color:blue;">Don't worry!</h2>, this is a start. 
 
 
     </body>
